added order receipt print & download

--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -64,7 +64,7 @@
 
 .custom-card-image {
     height: 100px !important;
-    object-fit: contain;
+    object-fit: cover;
 }
 
 .custom-card-height-body {
