--- a/frontend/src/styles/receipt.css
+++ b/frontend/src/styles/receipt.css
@@ -10,7 +10,7 @@ body {
     background-color: #f6f6f6;
 }
 
-.body-wrap {
+.receipt .body-wrap {
     background-color: #f6f6f6;
     width: 100%;
 }
@@ -19,7 +19,7 @@ body {
     padding: 0px !important;
 }
 
-.title {
+.receipt .title {
     position: relative;
     top: 10px;
 }
@@ -28,7 +28,7 @@ body {
     font-size: 12px;
 }
 
-.container {
+.receipt .container {
     /* display: block !important;
     max-width: 600px !important;
     margin: 0 auto !important; */
@@ -38,7 +38,7 @@ body {
     margin: auto !important;
 }
 
-.content {
+.receipt .content {
     max-width: 600px;
     margin: 0 auto;
     display: block;
@@ -48,38 +48,38 @@ body {
 /* -------------------------------------
     HEADER, FOOTER, MAIN
 ------------------------------------- */
-.main {
+.receipt .main {
     background: #fff;
     border: 1px solid #e9e9e9;
     border-radius: 3px;
 }
 
-.content-wrap {
+.receipt .content-wrap {
     padding: 10px;
 }
 
-.thank-you {
+.receipt .thank-you {
     position: relative;
     top: -5px;
 }
 
-.header {
+.receipt .header {
     width: 100%;
     margin-bottom: 20px;
 }
 
-.footer {
+.receipt .footer {
     width: 100%;
     clear: both;
     color: #999;
     padding: 20px;
 }
 
-.footer a {
+.receipt .footer a {
     color: #999;
 }
 
-.footer p,
+.receipt .footer p,
 .footer a,
 .footer unsubscribe,
 .footer td {
@@ -89,7 +89,7 @@ body {
 /* -------------------------------------
     TYPOGRAPHY
 ------------------------------------- */
-h1,
+.receipt h1,
 h2,
 h3 {
     font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
@@ -99,32 +99,32 @@ h3 {
     font-weight: 400;
 }
 
-h1 {
+.receipt h1 {
     font-size: 32px;
     font-weight: 500;
 }
 
-h2 {
+.receipt h2 {
     font-size: 24px;
 }
 
-h3 {
+.receipt h3 {
     font-size: 18px;
 }
 
-h4 {
+.receipt h4 {
     font-size: 14px;
     font-weight: 600;
 }
 
-p,
+.receipt p,
 ul,
 ol {
     margin-bottom: 10px;
     font-weight: normal;
 }
 
-p li,
+.receipt p li,
 ul li,
 ol li {
     margin-left: 5px;
@@ -139,7 +139,7 @@ a {
     text-decoration: underline;
 }
 
-.btn-primary {
+.receipt .btn-primary {
     text-decoration: none;
     color: #FFF;
     background-color: #1ab394;
@@ -157,11 +157,11 @@ a {
 /* -------------------------------------
     OTHER STYLES THAT MIGHT BE USEFUL
 ------------------------------------- */
-.last {
+.receipt .last {
     margin-bottom: 0;
 }
 
-.first {
+.receipt .first {
     margin-top: 0;
 }
 
@@ -169,15 +169,15 @@ a {
     text-align: center;
 }
 
-.alignright {
+.receipt .alignright {
     text-align: right;
 }
 
-.alignleft {
+.receipt .alignleft {
     text-align: left;
 }
 
-.clear {
+.receipt .clear {
     clear: both;
 }
 
@@ -185,7 +185,7 @@ a {
     ALERTS
     Change the class depending on warning email, good email or bad email
 ------------------------------------- */
-.alert {
+.receipt .alert {
     font-size: 16px;
     color: #fff;
     font-weight: 500;
@@ -194,22 +194,22 @@ a {
     border-radius: 3px 3px 0 0;
 }
 
-.alert a {
+.receipt .alert a {
     color: #fff;
     text-decoration: none;
     font-weight: 500;
     font-size: 16px;
 }
 
-.alert.alert-warning {
+.receipt .alert.alert-warning {
     background: #f8ac59;
 }
 
-.alert.alert-bad {
+.receipt .alert.alert-bad {
     background: #ed5565;
 }
 
-.alert.alert-good {
+.receipt .alert.alert-good {
     background: #1ab394;
 }
 
@@ -246,7 +246,7 @@ a {
 ------------------------------------- */
 @media only screen and (max-width: 640px) {
 
-    h1,
+    .receipt h1,
     h2,
     h3,
     h4 {
@@ -254,24 +254,24 @@ a {
         margin: 20px 0 5px !important;
     }
 
-    h1 {
+    .receipt h1 {
         font-size: 22px !important;
     }
 
-    h2 {
+    .receipt h2 {
         font-size: 18px !important;
     }
 
-    h3 {
+    .receipt h3 {
         font-size: 16px !important;
     }
 
-    .container {
+    .receipt .container {
         width: 100% !important;
     }
 
-    .content,
-    .content-wrap {
+    .receipt .content,
+    .receipt .content-wrap {
         padding: 10px !important;
     }
 
