added top 5 most sold products in order page

--- a/frontend/src/styles/order.css
+++ b/frontend/src/styles/order.css
@@ -2,8 +2,12 @@
     margin-top: 6% !important;
 }
 
-.custom-height {
-    height: 625px;
+.custom-margin-top-row {
+    margin-top: 2% !important;
+}
+
+.order .custom-height {
+    height: 300px;
 }
 
 .order-date {
