--- a/frontend/src/styles/order.css
+++ b/frontend/src/styles/order.css
@@ -7,7 +7,7 @@
 }
 
 .order .custom-height {
-    height: 322px;
+    height: 310px;
 }
 
 .order-date {
@@ -15,13 +15,13 @@
     right: 51px;
 }
 
-.order-card-body {
+.order-card-right {
     height: inherit;
     overflow-y: scroll;
 }
 
 .order-card {
-    height: 585px;
+    height: 500px;
     overflow-y: auto;
 }
 
@@ -29,18 +29,18 @@
     font-size: 14px;
 }
 
-.order-card-body::-webkit-scrollbar {
+.order-card-right::-webkit-scrollbar {
     height: 2px;
     width: 2px;
 }
 
 /* Track */
-.order-card-body::-webkit-scrollbar-track {
+.order-card-right::-webkit-scrollbar-track {
     background: #f1f1f1;
 }
 
 /* Handle */
-.order-card-body::-webkit-scrollbar-thumb {
+.order-card-right::-webkit-scrollbar-thumb {
     background: #888;
 }
 .order-card::-webkit-scrollbar {
