--- a/frontend/src/styles/order.css
+++ b/frontend/src/styles/order.css
@@ -63,3 +63,22 @@
     right: 6px;
     top: 7px;
 }
+
+.no-data-chart {
+    position: relative;
+    top: 50%;
+    bottom: 50%;
+}
+
+.no-data-most-sale {
+    position: absolute;
+    top: 65%;
+    left: 45%;
+    border-bottom: 0px;
+}
+.no-data-order {
+    position: absolute;
+    top: 50%;
+    bottom: 50%;
+    left: 39%;
+}
